--- a/4-flexbox/styles/flexbox.css
+++ b/4-flexbox/styles/flexbox.css
@@ -1,5 +1,6 @@
 .container {  
     display: flex;
+    justify-content: space-evenly;
  }
 
  .boxes {
@@ -9,12 +10,18 @@
     text-align: center;
     font-size: 30px;
  }
- 
- #box1 { background-color: green; }
+
+ #box1 { 
+    background-color: green; 
+    /* margin-right: auto; */
+}
  #box2 { background-color: yellow; }
  #box3 { background-color: pink; }
  #box4 { background-color: blue; }
  #box5 { background-color: red; }
  #box6 { background-color: orange; }
  #box7 { background-color: beige; }
- #box8 { background-color: lightgrey; }
+ #box8 { 
+    background-color: lightgrey; 
+    /* margin-left: auto; */
+}
