--- a/4-flexbox/styles/flexbox.css
+++ b/4-flexbox/styles/flexbox.css
@@ -21,17 +21,35 @@
     background-color: green; 
     /* margin-right: auto; */
     /* flex-grow: 2; */
+    order: 1;
 }
  #box2 { 
    background-color: yellow; 
+   order: 2;
    /* flex-grow: 1 */
 }
- #box3 { background-color: pink; }
- #box4 { background-color: blue; }
- #box5 { background-color: red; }
- #box6 { background-color: orange; }
- #box7 { background-color: beige; }
+ #box3 { 
+   background-color: pink; 
+   order: 3;
+}
+ #box4 { 
+   background-color: blue; 
+   order: 4;
+}
+ #box5 { 
+   background-color: red; 
+   order: 5;
+}
+ #box6 { 
+   background-color: orange; 
+   order: 6;
+}
+ #box7 { 
+   background-color: beige; 
+   order: 7;
+}
  #box8 { 
     background-color: lightgrey; 
+    order: 1;
     /* margin-left: auto; */
 }
